// Type definitions from MangaPlus for protocol buffer
// Based on: https://mangaplus.shueisha.co.jp/js/app.a3091b24.js

package MangaPlus;
syntax = "proto3";


message Response {
  optional SuccessResult success = 1;
}

message SuccessResult {
  optional AllTitlesView allTitlesView = 5;
  optional TitleDetailView titleDetailView = 8;
  optional MangaViewer mangaViewer = 10;

}

message AllTitlesView {
  repeated Title titles = 1;
}

message TitleDetailView {
  optional Title title = 1;
  optional ChapterGroup chapterListGroup = 28;
}

message MangaViewer {
  repeated Page pages = 1;
}

message Title {
  optional uint32 titleId = 1;
  optional string name = 2;
  optional int32 language = 7;
}

message Chapter {
  optional uint32 chapterId = 2;
  optional string name = 3;
  optional string subTitle = 4;
}

message ChapterGroup {
    repeated Chapter firstChapterList = 2;
    repeated Chapter midChapterList = 3;
    repeated Chapter lastChapterList = 4;
}

message Page {

  message MangaPage {
    optional string imageUrl = 1;
    optional string encryptionKey = 5;
  }

  optional MangaPage mangaPage = 1;
}